hw7/compiler_error_MySort.txt
/Users/yifeix/git/cpp_adv/hw7/sort_wrapper.cpp:42:5: error: no matching function for call to 'MySort'
    MySort(l.begin(),l.end());
    ^~~~~~
/Users/yifeix/git/cpp_adv/hw7/sort_wrapper.cpp:13:6: note: candidate template ignored: requirement 'std::is_same<std::random_access_iterator_tag, typename std::iterator_traits<__list_iterator<int, void *> >::iterator_category>::value' was not satisfied [with InputIt = std::__1::__list_iterator<int, void *>]
void MySort(InputIt begin, InputIt end)
     ^
1 error generated.
make[2]: *** [CMakeFiles/build/sort.dir/sort_wrapper.cpp.o] Error 1
make[1]: *** [CMakeFiles/build/sort.dir/all] Error 2
make: *** [all] Error 2
